welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:4: error: object java.awt.Color is not a value
  Color=getCouleurSol()
  ^SlugSnail:35: error: object java.awt.Color is not a value
    if (getCouleurSol()==Color) {
                         ^