welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
def hunt(c:Color) {
  avance()
  Color=getCouleurSol()
  while (!estSurBiscuit()) {
    if (isFacingTrail==true) {
      baisseBrosse()
      avance()
      leveBrosse()
    } else {
      gauche()
    }
  }
  prendBiscuit()
 }

/*def hunt() {
  while (!estSurBiscuit()) {
    if (isFacingTrail==true) {
      baisseBrosse()
      avance()
      leveBrosse()
    } else {
      gauche()
    }
  }
  prendBiscuit()
}*/

def isFacingTrail():Boolean = {
  if (estFaceMur()) {
    return false
  } else {
    avance()
    if (getCouleurSol()==Color) {
    recule()
    return true
    } else { 
    recule()
    return false
    }
  }
}